update section of our team

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/owl.carousel.css">
     <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/magnific-popup.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <!-- start navigationbar -->
     <header>
+
         <nav id="header-navbar" class="fixed-top col-md-3 pl-0">
 
             <ul class="nav flex-column mt-5">
@@ -110,18 +112,18 @@
         <!-- start carousel of service -->
         <div class="container">
             <div class="row">
-                <div id="owl-demo" class="owl-carousel owl-theme pt-5 " >
-                    
+                <div id="owl-demo" class="owl-carousel owl-theme pt-5 ">
+
                     <!-- gympsum ceiling works service -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
                             <img src="./images/services/service3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">gympsum ceiling works</h3>
-                                <p class="card-text">
-                                    We provide a range of versatile solutions for the repair,
-                                    maintenance and improvement of gypsum ceilings.
-                                </p>
+                                    <p class="card-text">
+                                        We provide a range of versatile solutions for the repair,
+                                        maintenance and improvement of gypsum ceilings.
+                                    </p>
                             </div>
                         </div>
                     </div>
@@ -131,10 +133,10 @@
                             <img src="./images/services/service2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">doors & partitions</h3>
-                                <p class="card-text">
-                                    SERVICE We provide doors to you that have been produced and assembled
-                                    in accordance with regulations.
-                                </p>
+                                    <p class="card-text">
+                                        SERVICE We provide doors to you that have been produced and assembled
+                                        in accordance with regulations.
+                                    </p>
                             </div>
                         </div>
                     </div>
@@ -148,24 +150,24 @@
                                         We believe that every corner should have the perfect finish.
                                         we provide the best quality of silicone filling with various color selections.
                                     </p>
-                                </div>
                             </div>
                         </div>
-                        <!-- internal furniture transport service -->
-                        <div class="item ">
-                            <div class="card ml-3 mr-3 ">
-                                <img src="./images/services/service1.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">internal furniture transport</h3>
-                                        <p class="card-text">
-                                            Our expert packing crew will arrive early on the scheduled day and
-                                            will carry out the designated tasks with military precision.
+                    </div>
+                    <!-- internal furniture transport service -->
+                    <div class="item ">
+                        <div class="card ml-3 mr-3 ">
+                            <img src="./images/services/service1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">internal furniture transport</h3>
+                                    <p class="card-text">
+                                        Our expert packing crew will arrive early on the scheduled day and
+                                        will carry out the designated tasks with military precision.
                                     </p>
-                                </div>
                             </div>
                         </div>
-                        <!-- electrical services -->
-                        <div class="item ">
+                    </div>
+                    <!-- electrical services -->
+                    <div class="item ">
                         <div class="card ml-3 mr-3">
                             <img src="./images/services/service7.jpg" class="card-img-top" alt="electrical services">
                             <div class="card-body">
@@ -174,45 +176,45 @@
                                         We carry -out a wide-range of work in the repair and general
                                         maintenance for various types of electrical works .
                                     </p>
-                                </div>
                             </div>
                         </div>
-                        <!-- alignment & adjustments service -->
-                        <div class="item ">
-                            <div class="card ml-3 mr-3">
-                                <img src="./images/services/service4.jpg" class="card-img-top" alt="alignment & adjustments">
-                                <div class="card-body">
-                                    <h5 class="card-title">alignment & adjustments</h3>
+                    </div>
+                    <!-- alignment & adjustments service -->
+                    <div class="item ">
+                        <div class="card ml-3 mr-3">
+                            <img src="./images/services/service4.jpg" class="card-img-top" alt="alignment & adjustments">
+                            <div class="card-body">
+                                <h5 class="card-title">alignment & adjustments</h3>
                                     <p class="card-text">
                                         Provided that no visible defects are identified during inspections,
                                         in the event of greater frequency of use.
                                     </p>
-                                </div>
                             </div>
                         </div>
+                    </div>
                     <!-- fixed and loose furnitue service -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
                             <img src="./images/services/service6.jpg" class="card-img-top" alt="fixed and loose furnitue">
                             <div class="card-body">
                                 <h5 class="card-title">fixed and loose furnitue</h3>
-                                <p class="card-text">
-                                    We care about the small details. As we also know how much
-                                    it is important to all our clients.
-                                </p>
+                                    <p class="card-text">
+                                        We care about the small details. As we also know how much
+                                        it is important to all our clients.
+                                    </p>
                             </div>
                         </div>
                     </div>
-                        <!-- upholstery services -->
+                    <!-- upholstery services -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
                             <img src="./images/services/service8.jpg" class="card-img-top" alt="upholstery">
                             <div class="card-body">
                                 <h5 class="card-title">upholstery</h3>
-                                <p class="card-text">
-                                    We provide cleaning services and repairing for any kind of upholstery
-                                    like leather, silk and cotton REPAIRING- Stitching - Cleaning
-                                </p>
+                                    <p class="card-text">
+                                        We provide cleaning services and repairing for any kind of upholstery
+                                        like leather, silk and cotton REPAIRING- Stitching - Cleaning
+                                    </p>
                             </div>
                         </div>
                     </div>
@@ -220,7 +222,7 @@
             </div>
     </section>
     <!-- end our services -->
-   
+
     <!-- start section of what we provide  -->
     <section class="what-provide__section ">
         <div class="overlay"></div>
@@ -252,41 +254,88 @@
     <!-- start mangar message section -->
     <section id="our-team" class="sections_padding">
         <div class="line-above__header"></div>
-        <h2  class="text-center pb-3 base-color">our team</h2>
+        <h2 class="text-center pb-3 base-color">our team</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
                     <div class="mangar-info">
-                        <img src="./images/mangars/manager1.PNG" alt="" >
+                        <img src="./images/mangars/manager1.PNG" alt="">
                         <div class="mangar-name text-center">
-                            <h5>nidal ghandour</h5>
+                            <h5 id="manager-message">
+                                nidal ghandour
+                            </h5>
                             <p>managing director</p>
+                            <p class="social-media">
+                                <a href="#">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </p>
                         </div>
                     </div>
-                </div> 
+                </div>
                 <div class="col-md-4">
                     <div class="mangar-info">
-                        <img src="./images/mangars/manager2.PNG" alt="" >
+                        <img src="./images/mangars/manager2.PNG" alt="">
                         <div class="mangar-name text-center">
                             <h5>nidal ayal</h5>
                             <p>commerical director</p>
+                            <p class="social-media">
+                                <a href="#">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </p>
                         </div>
                     </div>
-                </div> 
+                </div>
                 <div class="col-md-4">
                     <div class="mangar-info">
-                        <img src="./images/mangars/manager3.PNG" alt="" >
+                        <img src="./images/mangars/manager3.PNG" alt="">
                         <div class="mangar-name text-center">
                             <h5>iftekhar sayed</h5>
                             <p>projects director</p>
+                            <p class="social-media">
+                                <a href="#">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </p>
                         </div>
                     </div>
-                </div> 
+                </div>
             </div>
         </div>
-        
+
     </section>
-    <!-- end mangar message section -->    <!-- start our client section -->
+    <!-- end mangar message section -->
+    <!-- strat portofilo section -->
+    <!-- end portofilo section -->
+    <!-- start our client section -->
     <section id="our-client" class="sections_padding">
         <div class="overlay"></div>
         <div class="our-client__header">
@@ -299,56 +348,56 @@
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/client1-.png" alt="">
+                                <img src="./images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/client1-.png" alt="">
+                                <img src="./images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/client1-.png" alt="">
+                                <img src="./images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/client1-.png" alt="">
+                                <img src="./images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/client1-.png" alt="">
+                                <img src="./images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/client1-.png" alt="">
+                                <img src="./images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/client1-.png" alt="">
+                                <img src="./images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/client1-.png" alt="">
+                                <img src="./images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -433,12 +482,19 @@
         </div>
     </footer>
     <!-- end footer -->
+    <div id="test-popup" class="white-popup mfp-hide">
+        Popup content
+    </div>
+    <a href="#test-popup" class="open-popup-link">Show inline popup</a>
+    <button class="btn btn-primary">Open popup</button>
+    <a href="" id="open-popup" class="ajax-popup-link">Show inline popup</a>
 
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/popper.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/owl.carousel.js"></script>
     <script src="./js/all.min.js"></script>
+    <script src="./js/jquery.magnific-popup.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
