update portfolio section

--- a/index.html
+++ b/index.html
@@ -250,72 +250,97 @@
         </div>
     </section>
     <!-- end section of what we provide  -->
-     <!-- strat portofilo section -->
-     <section id="portofolio" class="sections_padding">
-            <div class="line-above__header"></div>
-            <h2 class="text-center pb-3 base-color">portofolio</h2>
-            <div class="container-fluid">
-                    <div class="row no-gutters">
-                        <div class="col-lg-3 col-md-4">
-                            <div class="portfolio-items">
-                                <a href="">
-                                    <img src="./images/portfolio/2-.PNG" alt="" >
-                                </a>
+    <!-- strat portofilo section -->
+    <section id="portofolio" class="sections_padding">
+        <div class="line-above__header"></div>
+        <h2 class="text-center pb-3 base-color">portofolio</h2>
+        <div class="container-fluid">
+            <div class="row no-gutters">
+                <div class="col-lg-3 col-md-4">
+                    <div class="portfolio-items">
+                        <a href="">
+                            <img src="./images/portfolio/2-.PNG" alt="">
+                            <div class="overlay">
+                                <h5>eherwood oak gardens</h5>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4">
-                            <div class="portfolio-items">
-                                <a href="">
-                                    <img src="./images/portfolio/14-.PNG" alt="" >
-                                </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <div class="portfolio-items">
+                        <a href="">
+                            <img src="./images/portfolio/14-.PNG" alt="">
+                            <div class="overlay">
+                                <h5>river crest</h5>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4">
-                            <div class="portfolio-items">
-                                <a href="">
-                                    <img src="./images/portfolio/16-.PNG" alt="" >
-                                </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <div class="portfolio-items">
+                        <a href="">
+                            <img src="./images/portfolio/16-.PNG" alt="">
+                            <div class="overlay">
+                                <h5>del monte</h5>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4">
-                            <div class="portfolio-items">
-                                <a href="">
-                                    <img src="./images/portfolio/18-.PNG" alt="" >
-                                </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <div class="portfolio-items">
+                        <a href="">
+                            <img src="./images/portfolio/18-.PNG" alt="">
+                            <div class="overlay">
+                                <h5>inverness</h5>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4">
-                            <div class="portfolio-items">
-                                <a href="">
-                                    <img src="./images/portfolio/20-.PNG" alt="" >
-                                </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <div class="portfolio-items">
+                        <a href="">
+                            <img src="./images/portfolio/20-.PNG" alt="">
+                            <div class="overlay">
+                                <h5>tree corners</h5>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4">
-                            <div class="portfolio-items">
-                                <a href="">
-                                    <img src="./images/portfolio/22-.PNG" alt="" >
-                                </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <div class="portfolio-items">
+                        <a href="">
+                            <img src="./images/portfolio/22-.PNG" alt="">
+                            <div class="overlay">
+                                <h5>lo'occitane</h5>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4">
-                            <div class="portfolio-items">
-                                <a href="">
-                                    <img src="./images/portfolio/23-.PNG" alt="" >
-                                </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <div class="portfolio-items">
+                        <a href="">
+                            <img src="./images/portfolio/23-.PNG" alt="">
+                            <div class="overlay">
+                                <h5>tory burch galeries</h5>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4">
-                            <div class="portfolio-items">
-                                <a href="">
-                                    <img src="./images/portfolio/26-.PNG" alt="" >
-                                </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <div class="portfolio-items">
+                        <a href="">
+                            <img src="./images/portfolio/26-.PNG" alt="">
+                            <div class="overlay">
+                                <h5>member lines decoration</h5>
                             </div>
-                        </div>
-                    </div>  
+
+                        </a>
+                    </div>
+                </div>
             </div>
+        </div>
     </section>
-    <!-- end portofilo section -->   
+    <!-- end portofilo section -->
     <!-- start our client section -->
     <section id="our-client" class="sections_padding">
         <div class="overlay"></div>
@@ -387,89 +412,89 @@
         </div>
     </section>
     <!-- end our client section -->
-        <!-- start our team section -->
-        <section id="our-team" class="sections_padding">
-                <div class="line-above__header"></div>
-                <h2 class="text-center pb-3 base-color">our team</h2>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="mangar-info">
-                                <img src="./images/mangars/manager1.PNG" alt="">
-                                <div class="mangar-name text-center">
-                                    <h5 id="manager-message">
-                                        nidal ghandour
-                                    </h5>
-                                    <p>managing director</p>
-                                    <p class="social-media">
-                                        <a href="#">
-                                            <i class="fab fa-twitter"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-google-plus-g"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-linkedin-in"></i>
-                                        </a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="mangar-info">
-                                <img src="./images/mangars/manager2.PNG" alt="">
-                                <div class="mangar-name text-center">
-                                    <h5>nidal ayal</h5>
-                                    <p>commerical director</p>
-                                    <p class="social-media">
-                                        <a href="#">
-                                            <i class="fab fa-twitter"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-google-plus-g"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-linkedin-in"></i>
-                                        </a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="mangar-info">
-                                <img src="./images/mangars/manager3.PNG" alt="">
-                                <div class="mangar-name text-center">
-                                    <h5>iftekhar sayed</h5>
-                                    <p>projects director</p>
-                                    <p class="social-media">
-                                        <a href="#">
-                                            <i class="fab fa-twitter"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-google-plus-g"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-linkedin-in"></i>
-                                        </a>
-                                    </p>
-                                </div>
-                            </div>
+    <!-- start our team section -->
+    <section id="our-team" class="sections_padding">
+        <div class="line-above__header"></div>
+        <h2 class="text-center pb-3 base-color">our team</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mangar-info">
+                        <img src="./images/mangars/manager1.PNG" alt="">
+                        <div class="mangar-name text-center">
+                            <h5 id="manager-message">
+                                nidal ghandour
+                            </h5>
+                            <p>managing director</p>
+                            <p class="social-media">
+                                <a href="#">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </p>
                         </div>
                     </div>
                 </div>
-        
-            </section>
-            <!-- end our team section -->
-        
+                <div class="col-md-4">
+                    <div class="mangar-info">
+                        <img src="./images/mangars/manager2.PNG" alt="">
+                        <div class="mangar-name text-center">
+                            <h5>nidal ayal</h5>
+                            <p>commerical director</p>
+                            <p class="social-media">
+                                <a href="#">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mangar-info">
+                        <img src="./images/mangars/manager3.PNG" alt="">
+                        <div class="mangar-name text-center">
+                            <h5>iftekhar sayed</h5>
+                            <p>projects director</p>
+                            <p class="social-media">
+                                <a href="#">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- end our team section -->
+
     <!-- start footer -->
     <footer class="sections_padding">
         <div class="container">
