--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/owl.carousel.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/magnific-popup.css">
+    <link rel="stylesheet" href="./css/venobox.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -258,8 +259,8 @@
             <div class="row no-gutters">
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="">
-                            <img src="./images/portfolio/2-.PNG" alt="">
+                        <a href="./images/portfolio/2.PNG"  class="venobox" data-gall="venue-gallery" >
+                            <img src="./images/portfolio/2-.PNG" alt="" class="img-fluid">
                             <div class="overlay">
                                 <h5>eherwood oak gardens</h5>
                             </div>
@@ -268,8 +269,8 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="">
-                            <img src="./images/portfolio/14-.PNG" alt="">
+                        <a href="./images/portfolio/Capture.PNG" class="venobox" data-gall="venue-gallery">
+                            <img src="./images/portfolio/14-.PNG" alt="" class="img-fluid">
                             <div class="overlay">
                                 <h5>river crest</h5>
                             </div>
@@ -278,7 +279,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="">
+                        <a href="./images/portfolio/16.PNG" class="venobox" data-gall="venue-gallery">
                             <img src="./images/portfolio/16-.PNG" alt="">
                             <div class="overlay">
                                 <h5>del monte</h5>
@@ -288,7 +289,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="">
+                        <a href="./images/portfolio/18.PNG" class="venobox" data-gall="venue-gallery">
                             <img src="./images/portfolio/18-.PNG" alt="">
                             <div class="overlay">
                                 <h5>inverness</h5>
@@ -298,7 +299,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="">
+                        <a href="./images/portfolio/20.PNG" class="venobox" data-gall="venue-gallery">
                             <img src="./images/portfolio/20-.PNG" alt="">
                             <div class="overlay">
                                 <h5>tree corners</h5>
@@ -308,7 +309,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="">
+                        <a href="./images/portfolio/22.PNG" class="venobox" data-gall="venue-gallery">
                             <img src="./images/portfolio/22-.PNG" alt="">
                             <div class="overlay">
                                 <h5>lo'occitane</h5>
@@ -318,7 +319,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="">
+                        <a href="./images/portfolio/23.PNG" class="venobox" data-gall="venue-gallery">
                             <img src="./images/portfolio/23-.PNG" alt="">
                             <div class="overlay">
                                 <h5>tory burch galeries</h5>
@@ -328,7 +329,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="">
+                        <a href="./images/portfolio/26.PNG" class="venobox" data-gall="venue-gallery">
                             <img src="./images/portfolio/26-.PNG" alt="">
                             <div class="overlay">
                                 <h5>member lines decoration</h5>
@@ -571,19 +572,16 @@
         </div>
     </footer>
     <!-- end footer -->
-    <div id="test-popup" class="white-popup mfp-hide">
-        Popup content
-    </div>
-    <a href="#test-popup" class="open-popup-link">Show inline popup</a>
-    <button class="btn btn-primary">Open popup</button>
-    <a href="" id="open-popup" class="ajax-popup-link">Show inline popup</a>
-
+    <a>
+        <i class="fas fa-chevron-up"></i>
+    </a>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/popper.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/owl.carousel.js"></script>
     <script src="./js/all.min.js"></script>
     <script src="./js/jquery.magnific-popup.min.js"></script>
+    <script src="./js/venobox.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
