--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Black stone</title>
-    <!-- <script src="./js/fontawesome.js" ></script> -->
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/owl.carousel.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/magnific-popup.css">
-    <link rel="stylesheet" href="./css/venobox.min.css">
+    <link rel="stylesheet" href="./css/lightbox.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <!-- start navigationbar -->
     <header>
-
         <nav id="header-navbar" class="fixed-top col-md-3 pl-0">
 
             <ul class="nav flex-column mt-5">
@@ -64,8 +62,6 @@
     <!-- end hero section  -->
     <!-- strat mission&vision -->
     <section id="mission-vision">
-        <!-- <div class="line-above__header"></div>
-        <h2>about us</h2> -->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 p-0">
@@ -259,7 +255,7 @@
             <div class="row no-gutters">
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/2.PNG"  class="venobox" data-gall="venue-gallery" >
+                        <a href="./images/portfolio/2.PNG"   data-lightbox="image-1" data-title="eherwood oak gardens" >
                             <img src="./images/portfolio/2-.PNG" alt="" class="img-fluid">
                             <div class="overlay">
                                 <h5>eherwood oak gardens</h5>
@@ -269,7 +265,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/Capture.PNG" class="venobox" data-gall="venue-gallery">
+                        <a href="./images/portfolio/14.PNG" data-lightbox="image-1" data-title="river crest">
                             <img src="./images/portfolio/14-.PNG" alt="" class="img-fluid">
                             <div class="overlay">
                                 <h5>river crest</h5>
@@ -279,7 +275,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/16.PNG" class="venobox" data-gall="venue-gallery">
+                        <a href="./images/portfolio/16.PNG" data-lightbox="image-1" data-title="del monte">
                             <img src="./images/portfolio/16-.PNG" alt="">
                             <div class="overlay">
                                 <h5>del monte</h5>
@@ -289,7 +285,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/18.PNG" class="venobox" data-gall="venue-gallery">
+                        <a href="./images/portfolio/18.PNG"  data-lightbox="image-1" data-title="inverness">
                             <img src="./images/portfolio/18-.PNG" alt="">
                             <div class="overlay">
                                 <h5>inverness</h5>
@@ -299,7 +295,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/20.PNG" class="venobox" data-gall="venue-gallery">
+                        <a href="./images/portfolio/20.PNG"  data-lightbox="image-1" data-title="tree corners">
                             <img src="./images/portfolio/20-.PNG" alt="">
                             <div class="overlay">
                                 <h5>tree corners</h5>
@@ -309,7 +305,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/22.PNG" class="venobox" data-gall="venue-gallery">
+                        <a href="./images/portfolio/22.PNG"  data-lightbox="image-1" data-title="lo'occitane">
                             <img src="./images/portfolio/22-.PNG" alt="">
                             <div class="overlay">
                                 <h5>lo'occitane</h5>
@@ -319,7 +315,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/23.PNG" class="venobox" data-gall="venue-gallery">
+                        <a href="./images/portfolio/23.PNG"  data-lightbox="image-1" data-title="tory burch galeries">
                             <img src="./images/portfolio/23-.PNG" alt="">
                             <div class="overlay">
                                 <h5>tory burch galeries</h5>
@@ -329,7 +325,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/26.PNG" class="venobox" data-gall="venue-gallery">
+                        <a href="./images/portfolio/26.PNG"  data-lightbox="image-1" data-title="member lines decoration">
                             <img src="./images/portfolio/26-.PNG" alt="">
                             <div class="overlay">
                                 <h5>member lines decoration</h5>
@@ -572,7 +568,7 @@
         </div>
     </footer>
     <!-- end footer -->
-    <a>
+    <a href="#" id="arrow">
         <i class="fas fa-chevron-up"></i>
     </a>
     <script src="./js/jquery-3.5.1.min.js"></script>
@@ -581,7 +577,7 @@
     <script src="./js/owl.carousel.js"></script>
     <script src="./js/all.min.js"></script>
     <script src="./js/jquery.magnific-popup.min.js"></script>
-    <script src="./js/venobox.min.js"></script>
+    <script src="./js/lightbox.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
