adding manager html

--- a/index.html
+++ b/index.html
@@ -416,11 +416,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="mangar-info">
+                    <div class="mangar-info" >
                         <img src="./images/mangars/manager1.PNG" alt="">
                         <div class="mangar-name text-center">
-                            <h5 id="manager-message">
-                                nidal ghandour
+                            <h5 >
+                                <a href="manager.html">nidal ghandour</a>
                             </h5>
                             <p>managing director</p>
                             <p class="social-media">
