adding scroll top arrow and update navbar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/magnific-popup.css">
     <link rel="stylesheet" href="./css/lightbox.css">
+    <link rel="stylesheet" href="./css/animate.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -22,25 +23,25 @@
 
             <ul class="nav flex-column mt-5">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">home</a>
+                    <a class="nav-link active" href="#hero-section">home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#mission-vision">about us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">services</a>
+                    <a class="nav-link" href="#services_section">services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">portfolio</a>
+                    <a class="nav-link" href="#portofolio">portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">our manger</a>
+                    <a class="nav-link" href="#our-client">our client</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">our client</a>
+                    <a class="nav-link" href="#our-team">our team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">contact us</a>
+                    <a class="nav-link" href="#footer-section">contact us</a>
                 </li>
 
             </ul>
@@ -65,7 +66,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 p-0">
-                    <div class="vision-content text-center">
+                    <div class="vision-content text-center wow fadeInDown">
                         <div class="line-above__header"></div>
                         <h2>our vision</h2>
                         <p class="m-auto w-50">to be the<br /> preferred maintenance service provider of choice
@@ -420,7 +421,7 @@
                         <img src="./images/mangars/manager1.PNG" alt="">
                         <div class="mangar-name text-center">
                             <h5 >
-                                <a href="manager.html">nidal ghandour</a>
+                                nidal ghandour
                             </h5>
                             <p>managing director</p>
                             <p class="social-media">
@@ -493,7 +494,7 @@
     <!-- end our team section -->
 
     <!-- start footer -->
-    <footer class="sections_padding">
+    <footer id="footer-section" class="sections_padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -578,6 +579,7 @@
     <script src="./js/all.min.js"></script>
     <script src="./js/jquery.magnific-popup.min.js"></script>
     <script src="./js/lightbox.js"></script>
+    <script src="./js/wow.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
